--- a/frontend/src/components/records.css
+++ b/frontend/src/components/records.css
@@ -8,7 +8,7 @@ input,button,select{
 }
 input:hover,button:hover,select:hover{
     box-shadow: 5px 5px 10px #efeba275;
-    border: 1.5px solid black
+    border: 1.5px solid black;
 }
 input{
     padding: 0.5% 3%;
